补充网盘下载说明

--- a/README.wiki
+++ b/README.wiki
@@ -12,31 +12,36 @@
 
 因为俺博客在墙外，并且长期遭到 GFW 封锁，建议用博客阅读器（比如 Digg Reader 或 Feedly）订阅俺博客，以获取电子书更新的通知。
 
-<h2>网盘下载须知</h2>
+<h2>下载说明</h2>
 
-2015年之前，俺的电子书同时放在 '''微软网盘''' （以前叫"SkyDrive"，现在叫"OneDrive"）和 '''Dropbox 网盘''' 中。
+2015年之前，俺的电子书同时放在 '''微软网盘''' （以前叫“SkyDrive”，现在叫“OneDrive”）和 '''Dropbox 网盘''' 中。
 
-由于 Dropbox 网盘有流量限制，而下载的读者又多。导致 Dropbox 网盘长期处于“流量超限”的状态，根本打不开电子书的页面。所以俺暂时把 Dropbox 网盘的链接去掉了。
+由于 Dropbox 网盘有流量限制，而下载的读者又多。导致 Dropbox 网盘长期处于“流量超限”的状态，根本打不开电子书的页面。
 
-为了解决流量的问题，俺增加了“第三网盘”—— '''基于“BT Sync”的分布式网盘''' 。它是采用 P2P 技术，所有数据保存在每个 P2P 节点上。因此，既【没有】流量限制，也【没有】存储空间的限制，并且具有【自动同步】的优势。也就是说：BT Sync 会自动把俺的电子书同步到你的电脑上。
+为了解决流量的问题，俺使用“BT Sync”来替代“Dropbox 网盘”。“BT Sync”采用的是 P2P 技术，所有数据保存在每个 P2P 节点上。因此，既【没有】流量限制，也【没有】存储空间的限制，并且具有【自动同步】的优势。也就是说：BT Sync 会自动把俺的电子书同步到你的电脑上。
 
 要使用 BT Sync 同步电子书，你需要在 BT Sync 界面上添加相应的密钥（密钥写在每个分类的标题下方）。关于 BT Sync 的扫盲教程，参见“[http://program-think.blogspot.com/2015/01/BitTorrent-Sync.html 这篇博文]”。
 
-<h3>关于批量下载</h3>
+<h3>关于“微软网盘”的说明</h3>
 
-微软网盘支持批量下载，可以把某个目录的电子书压缩成 zip 格式一起下载。具体操作请仔细看网盘界面。
+* 微软网盘支持批量下载，可以把某个目录的电子书压缩成 zip 格式一起下载。具体操作请仔细看网盘界面。
+* 微软网盘的 Web 页面需要依赖 Java Script 脚本，如果你的浏览器禁用了 JavaScript 会导致无法下载。
+* 微软网盘在墙外，有时候可能会被 GFW 封杀。如果你无法打开微软网盘的页面，请尝试用翻墙。
 
-网盘的 Web 页面需要依赖 Java Script 脚本，如果你的浏览器禁用了 JavaScript 会导致无法下载。
+<h3>关于“BT Sync 网盘”的说明</h3>
 
-<h3>关于翻墙</h3>
+“BT Sync 网盘”比“微软网盘”牛逼之处在于——它是基于 P2P 技术的，而墙内有很多 BT Sync 的节点，因此你【无需翻墙】就可以使用它（利用墙内节点帮你同步电子书）。
 
-微软网盘在墙外，有时候可能会被 GFW 封杀。如果你无法打开微软网盘的页面，请尝试用翻墙。
+BT Sync 如今出到 2.0 版本。但是功能有限制——最多只能添加10个同步目录（俺的电子书，同步目录都不止10个）。要解决此问题，有两个办法：
 
-至于“BT Sync 网盘”，由于是基于 P2P 技术，墙内有很多 BT Sync 的节点，因此你【无需】翻墙就可以用（利用墙内节点帮你同步电子书）。
+* 你老老实实花点银子，把手头的 2.0 “免费版”升级成“专业版”
+* 如果不想花银子，可以继续使用原先的 1.4 版本（官网下载链接是[http://syncapp.bittorrent.com/1.4.111/]）
 
-<h3>关于其它问题</h3>
+<h3>其它和“下载”相关问题</h3>
 
-下载或阅读过程中，如果还碰到其它问题搞不定，可以用邮件 '''[mailto:program.think@gmail.com]''' 跟俺联系，也可以到俺博客留言。
+下载或阅读过程中，如果还碰到其它问题搞不定，可以使用 GitHub 的 issue 给俺反馈。
+
+使用 issue 的规范参见[https://github.com/programthink/books/issues/1 这里]。
 
 <h2>电子书格式说明</h2>
 
@@ -63,9 +68,9 @@ EPUB 的的阅读软件很多，而且各个平台（Windows、Linux、Mac OS）
 如果你用 Windows 系统无法正常查看 CHM 电子书，请按照如下步骤设置，就可以正常打开了。
 
 # 在资源管理器中，选中该 CHM 文件
-# 点右键，在右键菜单里选"属性"
-# 弹出"属性对话框"
-# 在属性对话框中，点"解除锁定"钮
+# 点右键，在右键菜单里选“属性”
+# 弹出“属性对话框”
+# 在属性对话框中，点“解除锁定”钮
 
 用 Mac OS X 的同学，可以考虑用 Chmox 或 iCHM 打开 CHM 电子书；
 
@@ -79,13 +84,19 @@ HTML 格式的电子书会有多个文件，为了方便下载，用压缩打包
 
 TXT格式的电子书使用 '''UTF-8''' 编码保存。用 Windows 自带的记事本（Notepad）可以直接打开。
 
+<h3>其它和“格式”相关问题</h3>
+
+如果碰到其它跟“格式”有关的问题，你搞不定（比如某本书无法打开），可以使用 GitHub 的 issue 给俺反馈。
+
+使用 issue 的规范参见[https://github.com/programthink/books/issues/1 这里]。
+
 <h2>如何阅读书籍</h2>
 
 考虑到很多网友不善于阅读书籍， '''俺强烈推荐大伙儿看一下《如何阅读一本书》''' ([http://program-think.blogspot.com/2013/04/how-to-read-book.html 俺的书评]、下载地址：[https://skydrive.live.com/redir?resid=F5B0090663FEEADA!1250 PDF]、[https://skydrive.live.com/redir?resid=F5B0090663FEEADA!1251 TXT])。此书传授了关于阅读书籍的技巧，非常有价值。
 
 ----
 
-= 0 俺博客 =
+= 0 俺博客的离线浏览 =
 
 从2015年3月，俺开始用 BT Sync 提供博客上【全部内容】的离线浏览，而且是【免翻墙】哦。你可以通过如下 BT Sync 密钥，进行自动同步。
 
