修改“BT Sync 网盘的说明”

--- a/README.wiki
+++ b/README.wiki
@@ -32,10 +32,9 @@
 
 “BT Sync 网盘”比“微软网盘”牛逼之处在于——它是基于 P2P 技术的，而墙内有很多 BT Sync 的节点，因此你【无需翻墙】就可以使用它（利用墙内节点帮你同步电子书）。
 
-BT Sync 如今出到 2.0 版本。但是功能有限制——最多只能添加10个同步目录（俺的电子书，同步目录都不止10个）。要解决此问题，有两个办法：
+BT Sync 如今最新的是 2.2 版本。从“1.4 版本”一直到“2.2 版本”都可以用来同步俺的电子书。但是其中的“2.0 版本”存在“同步目录数的限制”，建议【不要】用这个版本。相比之下，更新的“2.2 版本”【没有】目录数的限制。
 
-* 你老老实实花点银子，把手头的 2.0 “免费版”升级成“专业版”
-* 如果不想花银子，可以继续使用原先的 1.4 版本（官网下载链接是[http://syncapp.bittorrent.com/1.4.111/]）
+BTSync 官网的下载链接是[https://www.getsync.com/]
 
 <h3>其它和“下载”相关问题</h3>
 
