补充下载说明

--- a/README.wiki
+++ b/README.wiki
@@ -8,33 +8,38 @@
 
 这里汇总了俺收藏的各类电子书（不断增加中）。
 
-俺每月会在博客上通知大伙儿，近期更新了哪些书。俺博客的订阅地址是：[http://feeds2.feedburner.com/programthink]
+俺每隔几个月会在博客上通知大伙儿，近期更新了哪些书。俺博客的订阅地址是：[https://feeds2.feedburner.com/programthink]
 
-因为俺博客在墙外，并且长期遭到 GFW 封锁，建议用博客阅读器（比如 Digg Reader 或 Feedly）订阅俺博客，以获取电子书更新的通知。
+因为俺博客在墙外，并且长期遭到 GFW 封锁，建议用博客阅读器（比如 Feedly）订阅俺博客，以获取电子书更新的通知。
 
 <h2>下载说明</h2>
 
-2015年之前，俺的电子书同时放在 '''微软网盘''' （以前叫“SkyDrive”，现在叫“OneDrive”）和 '''Dropbox 网盘''' 中。
+目前俺使用两种方式提供电子书的下载，分别是：
 
-由于 Dropbox 网盘有流量限制，而下载的读者又多。导致 Dropbox 网盘长期处于“流量超限”的状态，根本打不开电子书的页面。
+* 用 BT Sync 自动同步（该软件如今改名叫“Resilio Sync”）
+* 微软网盘（也叫做“OneDrive”）
 
-为了解决流量的问题，俺使用“BT Sync”来替代“Dropbox 网盘”。“BT Sync”采用的是 P2P 技术，所有数据保存在每个 P2P 节点上。因此，既【没有】流量限制，也【没有】存储空间的限制，并且具有【自动同步】的优势。也就是说：BT Sync 会自动把俺的电子书同步到你的电脑上。
+俺强烈推荐大伙儿使用【BT Sync 方式】。它的好处至少包括如下：
 
-要使用 BT Sync 同步电子书，你需要在 BT Sync 界面上添加相应的密钥（密钥写在每个分类的标题下方）。关于 BT Sync 的扫盲教程，参见“[https://program-think.blogspot.com/2015/01/BitTorrent-Sync.html 这篇博文]”。
+* 它可以【自动同步】电子书，省得你一个一个去下载
+* 它不依赖任何服务器，没有任何流量限制（相比之下，微软网盘如果同时有很多人在下载，可能会报错）
+* 它不依赖任何服务器，也就没有空间限制（相比之下，俺的微软网盘帐号，容量限制是 25GB）
+* 它不依赖任何服务器，也就没有任何审查
+* 它支持【免翻墙】进行同步（具体如何操作，参见下面的说明）
 
-<h3>关于“微软网盘”的说明</h3>
+<h3>关于“BT Sync / Resilio Sync”的补充说明</h3>
+
+首选，你需要安装 BTSync（ResilioSync）软件。它的【官网】下载链接是：[https://www.getsync.com/]
+
+要使用 BT Sync（Resilio Sync）同步电子书，你需要在 BT Sync 界面上添加相应的密钥（密钥写在本页面【每个分类标题】的下方）。关于 BT Sync 的扫盲教程，请参见“[https://program-think.blogspot.com/2015/01/BitTorrent-Sync.html 这篇博文]”。
+
+BT Sync 从“1.4 版本”一直到“目前最新版本”，都可以用来同步俺的电子书。早期的 1.4.x 版本支持 DHT 功能，可以在墙内【免翻墙】使用。2.0 之后的版本不再支持 DHT，无法享受这一好处。关于 DHT 功能如何开启，请参见“[https://program-think.blogspot.com/2017/08/GFW-Resilio-Sync.html 这篇博文]”。
+
+<h3>关于“微软网盘”的补充说明</h3>
 
 * 微软网盘支持批量下载，可以把某个目录的电子书压缩成 zip 格式一起下载。具体操作请仔细看网盘界面。
 * 微软网盘的 Web 页面需要依赖 Java Script 脚本，如果你的浏览器禁用了 JavaScript 会导致无法下载。
 * 微软网盘在墙外，有时候可能会被 GFW 封杀。如果你无法打开微软网盘的页面，请尝试用翻墙。
-
-<h3>关于“BT Sync 网盘”的说明</h3>
-
-“BT Sync 网盘”比“微软网盘”牛逼之处在于——它是基于 P2P 技术的，而墙内有很多 BT Sync 的节点，因此你【无需翻墙】就可以使用它（利用墙内节点帮你同步电子书）。
-
-BT Sync 从“1.4 版本”一直到“目前最新版本”，都可以用来同步俺的电子书。但是其中的“2.0 版本”存在“同步目录数的限制”，建议【不要】用这个版本。
-
-BTSync 官网的下载链接是[https://www.getsync.com/]
 
 <h3>其它和“下载”相关问题</h3>
 
